# DataScience

./: AtividadeEmAula.ipynb  Aula02.ipynb  Aula03.ipynb  README.md  pyproject.toml
