[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "scipy-stubs>=1.16.1.1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[tool.pyright]
typeCheckingMode = "off"
